<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>uk.co.bithatch</groupId>
	<version>1.0.0-SNAPSHOT</version>
	<artifactId>uk.co.bithatch.eclipzx.parent</artifactId>
	<packaging>pom</packaging>

	<properties>
		<xtextVersion>2.39.0</xtextVersion>
		<mwe2Version>2.22.0</mwe2Version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>21</maven.compiler.source>
		<maven.compiler.target>21</maven.compiler.target>
		<!-- Tycho settings -->
		<tycho-version>5.0.0</tycho-version>
		<!-- Define overridable properties for tycho-surefire-plugin -->
		<platformSystemProperties></platformSystemProperties>
		<moduleProperties></moduleProperties>
		<systemProperties></systemProperties>
		<additionalTestArguments></additionalTestArguments>
		<local.p2.repo>${project.basedir}/../bithatch.github.io/repositories/p2</local.p2.repo>
		
        <build.projectProperties>${project.basedir}/bithatch.build.properties</build.projectProperties>
        <build.userProperties>${user.home}/.bithatch.build.properties</build.userProperties>
	</properties>
	<modules>
		<module>uk.co.bithatch.bitzx</module>
		<module>uk.co.bithatch.widgetzx</module>
		<module>uk.co.bithatch.zxbasic</module>
		<module>uk.co.bithatch.zxbasic.ide</module>
		<module>uk.co.bithatch.zxbasic.ui</module>
		<module>uk.co.bithatch.emuzx</module>
		<module>uk.co.bithatch.emuzx.ui</module>
		<module>uk.co.bithatch.zxbasic.borielsdk</module>
		<module>uk.co.bithatch.emuzx.emulator.cspect</module>
		<module>uk.co.bithatch.emuzx.emulator.jspeccy</module>
		<module>uk.co.bithatch.emuzx.emulator.zesarux</module>
		<module>uk.co.bithatch.eclipzx</module>
		<module>uk.co.bithatch.eclipzx.ui</module>
		<module>uk.co.bithatch.fatexplorer</module>
		<module>uk.co.bithatch.jspeccy</module>
		<module>uk.co.bithatch.nextbuild</module>
		<module>uk.co.bithatch.nextlib</module>
		<module>uk.co.bithatch.squashzx</module>
		<module>uk.co.bithatch.drawzx</module>
		<module>uk.co.bithatch.ayzxfx</module>
		<module>uk.co.bithatch.eclipz88dk</module>
		<module>uk.co.bithatch.eclipzx.feature</module>
		<module>uk.co.bithatch.eclipzx.target</module>
		<module>uk.co.bithatch.eclipzx.repository</module>
	</modules>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.eclipse.xtext</groupId>
				<artifactId>xtext-dev-bom</artifactId>
				<version>${xtextVersion}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<build>
		<plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>properties-maven-plugin</artifactId>
            </plugin>
            
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-maven-plugin</artifactId>
				<version>${tycho-version}</version>
				<extensions>true</extensions>
			</plugin>

			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-source-plugin</artifactId>
				<version>${tycho-version}</version>
				<executions>
					<execution>
						<id>plugin-source</id>
						<goals>
							<goal>plugin-source</goal>
						</goals>
					</execution>
					<!--<execution> <id>source-feature</id> <phase>package</phase> <goals> 
						<goal>feature-source</goal> </goals> </execution> -->
				</executions>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-p2-plugin</artifactId>
				<version>${tycho-version}</version>
				<executions>
					<execution>
						<id>attach-p2-metadata</id>
						<phase>package</phase>
						<goals>
							<goal>p2-metadata</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>target-platform-configuration</artifactId>
				<version>${tycho-version}</version>
				<configuration>
					<target>
						<artifact>
							<groupId>uk.co.bithatch</groupId>
							<artifactId>uk.co.bithatch.eclipzx.target</artifactId>
							<version>${project.version}</version>
						</artifact>
					</target>
					<environments>
						<environment>
							<os>macosx</os>
							<ws>cocoa</ws>
							<arch>x86_64</arch>
						</environment>
						<environment>
							<os>macosx</os>
							<ws>cocoa</ws>
							<arch>aarch64</arch>
						</environment>
						<environment>
							<os>win32</os>
							<ws>win32</ws>
							<arch>x86_64</arch>
						</environment>
						<environment>
							<os>linux</os>
							<ws>gtk</ws>
							<arch>x86_64</arch>
						</environment>
						<environment>
							<os>linux</os>
							<ws>gtk</ws>
							<arch>aarch64</arch>
						</environment>
					</environments>
					<dependency-resolution>
						<extraRequirements>
							<requirement>
								<type>eclipse-plugin</type>
								<id>org.eclipse.xtext.logging</id>
								<versionRange>1.2.15</versionRange>
							</requirement>

							<!-- to get the org.eclipse.osgi.compatibility.state plugin if the 
								target platform is Luna or later. (backward compatible with kepler and previous 
								versions) see https://bugs.eclipse.org/bugs/show_bug.cgi?id=492149 -->
							<requirement>
								<type>eclipse-feature</type>
								<id>org.eclipse.rcp</id>
								<versionRange>0.0.0</versionRange>
							</requirement>
							
<!--							<requirement>
							     <type>eclipse-plugin</type>
                                 <id>org.eclipse.equinox.security.macosx</id>
                                 <versionRange>1.102.500.v20250521-0414</versionRange>
                                 <filter>(&amp;(osgi.os=macosx))</filter>
							</requirement>-->
							
						</extraRequirements>
					</dependency-resolution>
				</configuration>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>properties-maven-plugin</artifactId>
                    <version>1.2.1</version>
                    <executions>
                        <execution>
                            <phase>initialize</phase>
                            <goals>
                                <goal>read-project-properties</goal>
                            </goals>
                            <configuration>
                                <quiet>true</quiet>
                                <files>
                                    <file>${build.projectProperties}</file>
                                    <file>${build.userProperties}</file>
                                </files>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-p2-director-plugin</artifactId>
					<version>${tycho-version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-clean-plugin</artifactId>
					<version>3.1.0</version>
					<configuration>
						<filesets>
							<fileset>
								<directory>${basedir}/xtend-gen</directory>
								<includes>
									<include>**/*</include>
								</includes>
							</fileset>
						</filesets>
					</configuration>
				</plugin>
				<!-- to skip running (and compiling) tests use commandline flag: -Dmaven.test.skip 
					To skip tests, but still compile them, use: -DskipTests To allow all tests 
					in a pom to pass/fail, use commandline flag: -fae (fail at end) -->
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-surefire-plugin</artifactId>
					<version>${tycho-version}</version>
					<configuration>
						<!-- THE FOLLOWING LINE MUST NOT BE BROKEN BY AUTOFORMATTING -->
						<argLine>${platformSystemProperties} ${systemProperties}
							${moduleProperties} ${additionalTestArguments}</argLine>
						<failIfNoTests>false</failIfNoTests>
						<useUIHarness>false</useUIHarness>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
	<profiles>
		<profile>
			<id>macos</id>
			<activation>
				<os>
					<family>mac</family>
				</os>
			</activation>
			<properties>
				<!-- THE FOLLOWING LINE MUST NOT BE BROKEN BY AUTOFORMATTING -->
				<platformSystemProperties>-XstartOnFirstThread</platformSystemProperties>
			</properties>
		</profile>
		<profile>
			<id>jdk9-or-newer</id>
			<activation>
				<jdk>[9,)</jdk>
			</activation>
			<properties>
				<moduleProperties>--add-modules=ALL-SYSTEM</moduleProperties>
			</properties>
		</profile>
	</profiles>

	<dependencies>
	</dependencies>
</project>
